# Remote-robots-ROBOFIT

./: README.md  README.md~  REMOTE_ROBOTS_PROTOCOL.md  REMOTE_ROBOTS_PROTOCOL.md~  TODO_LIST.md
ROBOT/rosbridge_client/: CMakeLists.txt~  package.xml
ROBOT/rosbridge_server/: package.xml~
ROBOT/rosbridge_server/launch/: rosbridge_websocket.launch
ROBOT/rosbridge_server/scripts/: client  client.py  rosbridge_websocket.py.save  rosbrwebsock.py
ROBOT/video/: CMakeLists.txt  package.xml
ROBOT/video/src/: index.html
ROBOT/video_stream/: CMakeLists.txt~  package.xml
ROBOT/video_stream/include/video_client/: client.h
ROBOT/video_stream/src/: client.cpp~  server.cpp~  server.py  server.py~  video_client.cpp
SERVER/: AUTHORS.md  AUTHORS.md~  CHANGELOG.md  CHANGELOG.md~  LICENSE  README.md  README.md~  REMOTE_ROBOTS_PROTOCOL.md~  connectionmain.py  server.py  streamserver.py  webportal.py
WEB/: index.html  login.html  login.php  registration.php  registration_robot_script.php  table.php  workdashboard.php
WEB/js/: keyevents.js  roslib.js  roslib2.js
rosbridge_suite/rosbridge_server/launch/: rosbridge_websocket.launch~
rosbridge_suite/rosbridge_server/scripts/: rosbridge_websocket.py
test/: ahoj.txt
